force-app/main/default/objects/Supply__c/Supply__c.object-meta.xml
<CustomObject>
    <description>Stores of goods.</description>
    <label>Supply</label>
    <nameField>
        <label>Supply Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Supplies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>