force-app/main/default/objects/Supply__c/fields/Nobles_Only__c.field-meta.xml
<CustomField>
    <fullName>Nobles_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Nobles Only</label>
    <type>Checkbox</type>
</CustomField>