force-app/main/default/objects/Supply__c/fields/Storage_Location__c.field-meta.xml
<CustomField>
    <fullName>Storage_Location__c</fullName>
    <description>The location in which the supply is stored.</description>
    <label>Storage Location</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Supplies</relationshipLabel>
    <relationshipName>Supplies</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>