force-app/main/default/objects/Supply__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Type</label>
    <referenceTo>Resource_Type__c</referenceTo>
    <relationshipLabel>Supplies</relationshipLabel>
    <relationshipName>Supplies</relationshipName>
    <type>Lookup</type>
</CustomField>