force-app/main/default/objects/Supply__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Storage_Location__c</columns>
    <columns>Type__c</columns>
    <columns>Quantity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>